# devices-backend

./: Cargo.toml
configurations/: base.yaml
migrations/: 20230717064158_create_users_table.up.sql  20230724001331_create_admin_user.down.sql  20230724001331_create_admin_user.up.sql  20230725064102_create_team_table.down.sql  20230725064102_create_team_table.up.sql  20230725064112_create_device_type_table.down.sql  20230725064112_create_device_type_table.up.sql  20230725064118_create_device_table.up.sql  20230725065803_create_owner_table.up.sql
scripts/: init_db.sh
src/: configuration.rs  errors.rs  lib.rs  main.rs  password.rs  startup.rs  telemetry.rs  utils.rs
src/middlewares/: authentication_layer.rs  mod.rs
src/models/: credentials.rs  error_response.rs  login.rs  mod.rs  permission.rs  user_table.rs
src/repositories/: i_user_repository.rs  mod.rs  postgres_user_repository.rs
src/routes/: devices.rs  health_check.rs  login.rs  mod.rs
tests/api/: health_check.rs  helpers.rs  login.rs  main.rs
