[package]
name = "devices_backend"
version = "0.1.0"
edition = "2021"
authors = ["boris.lok<boris.lok.tw@outlook.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "devices"

[dependencies]
# Async runtime
tokio = { version = "1.29.1", features = ["full"] }
# Backend framework
axum = { version = "0.6.18", features = ["headers"] }
axum-extra = "0.7.4"
# Support Cypto
argon2 = { version = "0.5.1", features = ["std"] }
# Support async trait
async-trait = "0.1.71"
# Support database
sqlx = { version = "0.7.1", features = [
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid"
] }
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.0", features = ["v4"] }
sea-query = { version = "0.29.1", features = [
  "derive",
  "postgres-types",
  "chrono",
  "with-chrono",
] }
# Support Config
config = "0.13.3"
# Support Secret
secrecy = { version = "0.8.0", features = ["serde"] }
# Support Encoding/Decoding
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
# Json web token
jsonwebtoken = "8.3.0"
# Enchance Coding Style
thiserror = "1.0.43"
anyhow = "1.0.72"
# Support logging
hyper = "0.14.27"
tower = "0.4.13"
tower-http = { version = "0.4.1", features = [
  "trace",
  "request-id",
  "util",
  "cors",
] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.11.18", features = [
  "json",
  "rustls-tls",
  "cookies",
], default-features = false }
fake = "2.6.1"
